--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-image: url(images/Untitled-1-01.png);
+  background-image: url(images/);
   background-position: top;
   background-repeat: no-repeat;
   background-size: cover;
@@ -296,10 +296,11 @@ nav .content .links {
     border-radius: 5px !important;
   }
 
-  .search-icon{
+  .search-icon {
     padding-left: 80px;
   }
-  .menu-icon{
+
+  .menu-icon {
     padding-right: 80px;
 
   }
@@ -341,6 +342,11 @@ nav .content .links {
   height: 100vh;
   width: 100%;
   z-index: -1;
+  background-image: url(images/background.png);
+  background-position: top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
 }
 
 .home-page-head-heading {
@@ -372,10 +378,10 @@ p {
 
 @media screen and (max-width: 900px) {
   body {
-    background-image: url(images/mobile-background.png);
+    /*background-image: url(images/mobile-background.png);
     background-position: top;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: cover;*/
 
     margin-left: auto;
     margin-right: auto;
@@ -1168,12 +1174,23 @@ h3 {
 /*FOOTER*/
 
 footer {
+  background-image: url(images/footer.png);
+  background-size: cover;
+  background-position: top;
+  height: 600px;
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+  padding-top: 350px;
+}
+
+/*footer {
   height: 50vh;
   width: 100%;
   display: flex;
   justify-content: space-around;
   padding-top: 100px;
-}
+}*/
 
 .footer-logo {
   color: #7B21C3;
@@ -1224,7 +1241,8 @@ footer {
     align-items: center;
     flex-direction: column;
     width: 100%;
-
+    background-image: url(images/mobile-footer.png);
+    padding-top: 30px;
   }
 
   .footer-box {
@@ -1281,4 +1299,138 @@ footer {
     height: 30px;
     padding-right: 15px;
   }
+}
+
+
+@media screen and (max-width: 400px) {
+  footer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    width: 100%;
+    height: 400px;
+    background-image: url(images/mobile-footer.png);
+    padding-top: 30px;
+  }
+
+  .footer-box {
+    display: flex;
+    justify-content: space-between;
+    width: 90%;
+  }
+
+  .footer-box div {
+    width: 33.3%;
+  }
+
+  .footer-box .support {
+    width: 25%;
+  }
+
+  .footer-box div h5 {
+    color: #fff;
+    font-family: 'Raleway', sans-serif;
+    font-size: 16px;
+    font-weight: 700;
+    padding-bottom: 30px;
+  }
+
+  .footer-box div p {
+    color: #fff;
+    font-family: 'Raleway', sans-serif;
+    font-size: 12px;
+    font-weight: 400;
+    padding-bottom: 10px;
+  }
+
+  .footer-logo {
+    margin-bottom: 30px;
+  }
+
+  .social-media-footer {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-bottom: 10px;
+  }
+
+  .social-media-footer h5 {
+    font-size: 18px;
+  }
+
+  .social-media-footer h5 {
+    padding-bottom: 20px;
+    padding-top: 20px;
+  }
+
+  .social-media-footer img {
+    height: 30px;
+    padding-right: 15px;
+  }
+}
+
+
+/*HAIR PAGE*/
+/*BODY PAGE*/
+/*DEODORANT PAGE*/
+
+.hair-care-heading {
+  width: 100%;
+  height: 700px;
+  color: #fff;
+  font-family: 'Raleway', sans-serif;
+  font-size: 55px;
+  font-weight: 700;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  justify-content: center;
+  background-image: url(images/hair-page-1.png);
+  background-size: cover;
+}
+
+.hair-care-heading h1 {
+  padding-bottom: 100px;
+}
+
+.hair-page-h3 {
+  margin-bottom: 40px;
+}
+
+.card-flex {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.card-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  align-items: center;
+  justify-content: center;
+  grid-gap: 150px;
+  padding: 100px;
+  box-sizing: border-box;
+}
+
+@media screen and (max-width: 900px){
+  .hair-care-heading{
+    background-image: url(images/mobile-header-2.png);
+    height: 500px;
+    background-position: top;
+  }
+
+  .card-grid{
+    grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
+    padding: 50px;
+  }
+
+  .hair-care-heading h1{
+    font-size: 50px;
+  }
+
+
 }
